--- a/src/SCSS/pages/home.scss
+++ b/src/SCSS/pages/home.scss
@@ -9,8 +9,8 @@
 }
 
 .home-body {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
 
   max-width: 1000px;
 
